# capsule

./: .env  .env.example  .gitattributes  .gitignore  ANALYSE_Ontologie_und_Code_Verbesserungen.md  APPLY_WORKSPACE_CLEANUP.md  APPLY_WORKSPACE_CLEANUP_SAFE.md  BEDIENUNGSANLEITUNG Karens Wardrobe.txt  MANIFEST.in  README.md  WORKLOG_OntologyValidation_SoftMode.md  Wardrobe_Studio_Starten.bat  capsule.cmd  capsule.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  wardrobe_export.json
.github/: branch-protection.required-checks.json  pull_request_template.md
docs/: ARCHITECTURE.md  ARCHITECTURE_REQUIREMENTS_DOSSIER.md  CHAT_HANDOFF_TEMPLATE.md  DEPLOYMENT_TARGET_STATE.md  DEVELOPER_WORKFLOW.md  DOCUMENTATION_ROADMAP.md  ENGINEERING_GUIDELINES.md  ENGINEERING_MANIFEST.md  ENGINEERING_MANIFEST_CAPSULE_ADDENDUM.md  FINAL_BASELINE.md  HANDOFF_GUIDE.md  HANDOFF_MANIFEST.md  HANDOFF_RUNTIME_STATE.md  INDEX.md  NORMAL_OPERATIONS.md  OBSERVABILITY.md  PACKAGING.md  PERFORMANCE.md  PROJECT_STATE.md  QUICKSTART.md  RELEASE_ARTIFACTS.md  RELEASE_EVIDENCE_TEMPLATE.md  RELEASE_MANAGEMENT.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  RUNBOOK.md  RUNBOOK_VPS_ACCESS_AND_CLOUDFLARE.md  RUNBOOK_VPS_WINDOWS_HARDENING.md  SECURITY.md  TEST_STRATEGY.md  VPS_CUTOVER_CHECKLIST.md  VPS_DEPLOYMENT_RUNBOOK.md  VPS_OPERATIONS.md  WORKING_AGREEMENT.md  WORKSPACE_CLEANUP_INVENTORY.md  WORKSPACE_CLEANUP_PLAN.md
ontology/: color_lexicon.yaml  ontology_overrides.yaml  ontology_part_01_overview.md  ontology_part_02_taxonomy.md  ontology_part_03_item_types.md  (+6 more)
src/: api_item_query.py  (+62 more)
(+252 files in other folders)
